docs: Restructure Get Started section into two focused guides
- Rewrote "Welcome to Levelset" as feature overview
- Created comprehensive "Getting Started" guide covering:
  - Organizations and Locations
  - Employees vs Users
  - Roles and Permission Levels
  - FOH/BOH concepts
  - Positions and Rating Criteria
  - Dashboard navigation
  - Mobile app access
  - Login process
  - How all concepts connect
- Removed redundant introduction.mdx and first-login.mdx
- Updated docs.json navigation

--- a/docs/overview.mdx
+++ b/docs/overview.mdx
@@ -1,65 +1,115 @@
 ---
 title: Welcome to Levelset
-description: Your complete guide to using Levelset for team performance management
+description: An introduction to Levelset and what it can do for your team
 ---
 
 # Welcome to Levelset
 
-Levelset helps you track team performance, manage discipline, and develop your employees. This guide will show you how to use every feature.
+Levelset is a team performance platform that helps you track how your employees perform, manage discipline consistently, and develop your team over time.
 
-## What Can You Do With Levelset?
+## What Is Levelset?
+
+Levelset gives you the tools to:
+
+- **See how your team is performing** at a glance
+- **Rate employees** on specific positions and skills
+- **Track discipline** with a consistent, documented process
+- **Manage your roster** of employees and their roles
+
+Whether you're running one location or several, Levelset keeps everything organized in one place.
+
+## Core Features
+
+### Positional Excellence
+
+Rate team members on how well they perform in specific positions.
 
 <CardGroup cols={2}>
-  <Card title="Rate Team Members" icon="star" href="/positional-excellence/overview">
-    Submit positional ratings to track how your team performs in different roles
+  <Card title="Position-Based Ratings" icon="clipboard-check">
+    Each position (like Register, Drive-Thru, or Grill) has 5 criteria that define what good performance looks like.
   </Card>
-  <Card title="Track Discipline" icon="clipboard-list" href="/discipline/overview">
-    Document infractions and follow a consistent discipline process
+  <Card title="1-3 Rating Scale" icon="star">
+    Simple scoring: **Not Yet** (1), **On the Rise** (2), or **Crushing It** (3).
   </Card>
-  <Card title="Manage Your Roster" icon="users" href="/roster-management/overview">
-    Keep employee information, roles, and status up to date
+  <Card title="Rolling Averages" icon="chart-line">
+    Levelset calculates averages from the last 4 ratings so you see current performance, not ancient history.
   </Card>
-  <Card title="Configure Settings" icon="gear" href="/organization-settings/overview">
-    Customize positions, criteria, roles, and permissions for your organization
+  <Card title="Multiple Views" icon="table-columns">
+    See ratings by employee, by position, or by who submitted them.
   </Card>
 </CardGroup>
 
-## Quick Start Guide
+[Learn more about Positional Excellence →](/positional-excellence/overview)
 
-<Steps>
-  <Step title="Log In">
-    Go to [app.levelset.io](https://app.levelset.io) and sign in with your email and password, or use Google Sign-In.
-  </Step>
-  
-  <Step title="Select Your Location">
-    If you have access to multiple locations, select the one you want to work with from the dropdown in the navigation bar.
-  </Step>
-  
-  <Step title="Start Using Levelset">
-    Navigate to any section using the menu at the top of the screen.
-  </Step>
-</Steps>
+### Discipline Tracking
 
-## Main Sections
+Document infractions and follow a consistent progressive discipline process.
 
-| Section | What It's For |
-|---------|---------------|
-| **Home** | See an overview of your team's performance metrics |
-| **Positional Excellence** | View ratings and track employee progress |
-| **Discipline** | Manage infractions and disciplinary actions |
-| **Roster** | View and edit employee information |
-| **Settings** | Configure how Levelset works for your organization |
+<CardGroup cols={2}>
+  <Card title="Point System" icon="calculator">
+    Each infraction type has a point value. Points accumulate over time.
+  </Card>
+  <Card title="Recommended Actions" icon="lightbulb">
+    When points reach thresholds, the system tells you what action to take (verbal warning, written warning, etc.).
+  </Card>
+  <Card title="Complete History" icon="clock-rotate-left">
+    Every infraction is documented with dates, details, and who submitted it.
+  </Card>
+  <Card title="Consistent Process" icon="scale-balanced">
+    Everyone follows the same rules, so discipline is fair across the team.
+  </Card>
+</CardGroup>
+
+[Learn more about Discipline →](/discipline/overview)
+
+### Roster Management
+
+Keep your employee list up to date.
+
+- Add new team members when they're hired
+- Update roles when people are promoted
+- Track who works FOH (Front of House) vs BOH (Back of House)
+- Manage active/inactive status
+
+[Learn more about Roster Management →](/roster-management/overview)
+
+### Organization Settings
+
+Configure how Levelset works for your organization.
+
+- Define positions and what criteria each position is rated on
+- Set up your role hierarchy (Operator, Manager, Team Lead, etc.)
+- Control who can submit ratings and access discipline
+- Manage who has dashboard login access
+
+[Learn more about Settings →](/organization-settings/overview)
+
+## The Dashboard vs Mobile App
+
+Levelset has two ways to access it:
+
+| Platform | Best For | Access |
+|----------|----------|--------|
+| **Web Dashboard** | Viewing reports, managing settings, full feature access | [app.levelset.io](https://app.levelset.io) |
+| **Mobile App** | Submitting ratings and infractions on the floor | Same URL on your phone |
+
+Leadership typically uses the dashboard for analysis and management. Supervisors often use mobile to submit ratings during shifts.
+
+## Who Uses Levelset?
+
+Levelset is designed for restaurant and service industry teams:
+
+- **Operators/Owners** - Full control over everything
+- **Directors/Managers** - View reports, submit ratings, manage discipline
+- **Supervisors/Team Leads** - Submit ratings for their team
+- **Trainers** - Submit ratings for positions they train
 
 ## Getting Help
 
-- **Contact your administrator** for questions about your organization's settings
-- **Email support@levelset.io** for technical issues
-- **Use this documentation** to learn how each feature works
+- **This documentation** - Guides for every feature
+- **Your administrator** - Questions about your organization's setup
+- **support@levelset.io** - Technical issues
 
 ## Next Steps
 
-New to Levelset? Start here:
-
-1. [Introduction](/getting-started/introduction) - Learn the basics
-2. [First Login](/getting-started/first-login) - Set up your account
-3. [Positional Excellence](/positional-excellence/overview) - Start rating your team
+Ready to learn how Levelset is set up? Continue to **[Getting Started](/getting-started/getting-started)** to understand the key concepts.
