fix: Put index page in Get Started group (empty group names not allowed)

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,5 +1,6 @@
 ---
-title: Levelset Documentation
+title: Home
+sidebarTitle: Home
 description: Learn how to use Levelset to manage your team's performance
 ---
 
