--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,14 +1,15 @@
 ---
-title: Home
-sidebarTitle: Home
-description: Learn how to use Levelset to manage your team's performance
+title: "Home"
+sidebarTitle: "Home"
+description: "Learn how to use Levelset to manage your team's performance"
 ---
 
-<div style={{ textAlign: 'center', marginBottom: '2rem' }}>
-  <img src="/images/logo.png" alt="Levelset" style={{ maxWidth: '200px', marginBottom: '1rem' }} />
-  <p style={{ fontSize: '1.25rem', color: '#666' }}>
-    Your complete guide to team performance management
-  </p>
+<div style={{ textAlign:"center",marginBottom:"2rem" }}>
+<p style={{ fontSize:"1.25rem",color:"#666" }}>
+Your complete guide to team performance management
+
+</p>
+
 </div>
 
 ## How can we help you today?
@@ -56,10 +57,10 @@ description: Learn how to use Levelset to manage your team's performance
 ## Need Help?
 
 <Tip>
-Use the **search bar** at the top of the page or **Ask AI** to find answers to your questions quickly.
+  Use the **search bar** at the top of the page or **Ask AI** to find answers to your questions quickly.
 </Tip>
 
 Can't find what you're looking for?
 
 - **Contact your administrator** for questions about your organization's specific setup
-- **Email support@levelset.io** for technical issues or feature requests
+- [**Email support@levelset.io**](mailto:support@levelset.io) for technical issues or feature requests
