--- a/docs/organization-settings/overview.mdx
+++ b/docs/organization-settings/overview.mdx
@@ -1,6 +1,6 @@
 ---
-title: Organization Settings Overview
-description: How to configure Levelset for your organization
+title: "Organization Settings Overview"
+description: "How to configure Levelset for your organization"
 ---
 
 # Organization Settings
@@ -20,61 +20,58 @@ The settings page has a sidebar with different sections:
 
 Configure the main features of Levelset:
 
-| Section | What You Configure |
-|---------|-------------------|
+| Section                   | What You Configure                                     |
+| ------------------------- | ------------------------------------------------------ |
 | **Positional Excellence** | Positions, rating criteria, role mapping, rating scale |
-| **Discipline** | Infraction types, actions, access, notifications |
-| **Roster** | Pay settings (coming soon) |
-| **Pathway** | Training pathways (coming soon) |
-| **Evaluations** | Performance evaluations (coming soon) |
+| **Discipline**            | Infraction types, actions, access, notifications       |
+| **Roster**                | Pay settings (coming soon)                             |
+| **Pathway**               | Training pathways (coming soon)                        |
+| **Evaluations**           | Performance evaluations (coming soon)                  |
 
 ### Users and Security
 
 Control who can access Levelset:
 
-| Section | What You Configure |
-|---------|-------------------|
-| **Users** | Who can log into the dashboard |
-| **Roles** | The role hierarchy and colors |
-| **Permissions** | Role-based access controls |
+| Section         | What You Configure             |
+| --------------- | ------------------------------ |
+| **Users**       | Who can log into the dashboard |
+| **Roles**       | The role hierarchy and colors  |
+| **Permissions** | Role-based access controls     |
 
 ### Mobile App
 
 Configure mobile access:
 
-| Section | What You Configure |
-|---------|-------------------|
-| **Access** | QR codes and links for mobile app |
+| Section           | What You Configure                |
+| ----------------- | --------------------------------- |
+| **Access**        | QR codes and links for mobile app |
 | **Configuration** | Mobile app settings (coming soon) |
 
 ### Location & Organization
 
 General information:
 
-| Section | What You Configure |
-|---------|-------------------|
-| **Location Details** | Location-specific settings and images |
-| **Organization Details** | Organization-wide settings |
+| Section                  | What You Configure                    |
+| ------------------------ | ------------------------------------- |
+| **Location Details**     | Location-specific settings and images |
+| **Organization Details** | Organization-wide settings            |
 
 ## Who Can Access Settings
 
-Access depends on your role:
+Access depends on your role and is unique to your organization's settings. By default:
 
-| Role Level | Access |
-|------------|--------|
-| Operator | Full access to all settings |
-| Leadership | Access to most settings (except Users in some cases) |
-| Others | Typically no access to settings |
-
-<Note>
-Levelset administrators always have full access regardless of role.
-</Note>
+| Role Level         | Access                                      |
+| ------------------ | ------------------------------------------- |
+| Level 0 (Operator) | Full access to all settings                 |
+| Level 1            | Access to edit most settings                |
+| Level 2            | View (but not edit) access to most settings |
 
 ## How Changes Work
 
 ### Auto-Save
 
 Most settings save automatically:
+
 - Text fields save when you click away
 - Dropdowns save immediately when you select
 - Toggles save on click
@@ -83,21 +80,22 @@ Some sections have a **Save Changes** button for explicit saving.
 
 ### What Changes Affect
 
-| Change Type | Effect |
-|-------------|--------|
-| Position changes | Affects what can be rated going forward |
-| Role changes | Affects permissions immediately |
-| User changes | Affects login access immediately |
-| Criteria changes | Affects future ratings (not historical) |
-| Threshold changes | Affects how ratings are categorized |
+| Change Type       | Effect                                  |
+| ----------------- | --------------------------------------- |
+| Position changes  | Affects what can be rated going forward |
+| Role changes      | Affects permissions immediately         |
+| User changes      | Affects login access immediately        |
+| Criteria changes  | Affects future ratings (not historical) |
+| Threshold changes | Affects how ratings are categorized     |
 
 ## Before Making Changes
 
 <Warning>
-Changes affect all users and locations in your organization. Make changes carefully.
+  Changes affect all users and locations in your organization. Make changes carefully.
 </Warning>
 
 Best practices:
+
 1. **Understand the impact** - Know what the change will affect
 2. **Communicate** - Tell your team about changes that affect them
 3. **Test if possible** - Try changes with a small group first
