--- a/docs/organization-settings/positions.mdx
+++ b/docs/organization-settings/positions.mdx
@@ -1,15 +1,13 @@
 ---
-title: Managing Positions
-description: How to set up and configure positions for ratings
+title: "Managing Positions"
+description: "How to set up and configure positions for ratings"
 ---
-
-# Managing Positions
 
 Positions are the specific jobs team members work and get rated on. This guide shows you how to manage them.
 
 ## Accessing Position Settings
 
-1. Go to **Organization Settings**
+1. Go to [**Organization Settings**](https://app.levelset.io/organization-settings)
 2. Click **Positional Excellence** in the sidebar
 3. Select the **Positions** tab
 
@@ -20,28 +18,30 @@ Positions are the specific jobs team members work and get rated on. This guide s
 A position represents a specific job function:
 
 **Front of House (FOH)**
+
 - Register/iPOS
-- Drive-Thru
+- Bagging
 - Dining Room/Host
-- Drinks/Beverages
+- Drinks
 
 **Back of House (BOH)**
-- Grill/Primary
+
+- Primary
 - Prep
 - Fries
-- Expeditor
+- Breading
 
 Your organization can define any positions that make sense for your operation.
 
 ### FOH vs BOH
 
-Each position belongs to one or both categories:
+Each position belongs to one category:
 
-- **FOH** = Customer-facing roles
-- **BOH** = Kitchen/production roles
+- **FOH**
+- **BOH**
 
 This categorization:
-- Filters which employees appear for each position in ratings
+
 - Organizes positions in the dashboard
 - Helps with reporting
 
@@ -51,15 +51,12 @@ This categorization:
   <Step title="Find the Add Button">
     Look for **Add FOH Position** or **Add BOH Position** below the existing positions.
   </Step>
-  
   <Step title="Enter the Position Name">
     Type a clear, short name (e.g., "Drive-Thru", "Grill", "Expeditor").
   </Step>
-  
   <Step title="Add a Description">
     Write a description explaining what this position does. This shows up in the rating form.
   </Step>
-  
   <Step title="Save">
     The position saves automatically when you click away, or click **Save Changes**.
   </Step>
@@ -78,7 +75,7 @@ This categorization:
 2. Confirm the deletion
 
 <Warning>
-Deleting a position removes it from future ratings. Historical ratings are preserved, but the position won't appear in new rating submissions.
+  Deleting a position removes it from future ratings. Historical ratings are preserved, but the position won't appear in new rating submissions.
 </Warning>
 
 ## Writing Good Position Descriptions
@@ -89,21 +86,6 @@ The description helps raters understand what the position involves. Include:
 - **Key tasks** - What activities should you look for?
 - **Excellence indicators** - What does great performance look like?
 
-### Example Description
-
-```
-Grill Team
-
-Responsible for all cooked proteins. During service:
-- Cook chicken filets and nuggets to spec
-- Maintain proper holding times
-- Keep station organized and stocked
-- Communicate timing with expeditor
-
-Excellence means consistent cook quality, 
-fast recovery during rushes, and zero food safety issues.
-```
-
 ## Reordering Positions
 
 Drag and drop positions to change their order:
@@ -112,15 +94,15 @@ Drag and drop positions to change their order:
 2. Drag the position up or down
 3. Release to set the new position
 
-The order affects how positions appear in dropdowns and lists.
+The order affects how positions appear in dropdowns, lists, and tables.
 
 ## Language Support
 
 If your team includes Spanish speakers:
 
 1. Switch the language toggle to **Español**
-2. Enter the Spanish name and description
 3. Use the **Auto-translate** button to translate from English
+2. Customize the Spanish names and descriptions
 
 ## After Adding a Position
 
@@ -131,20 +113,20 @@ When you add a new position, you also need to:
 
 Without rating criteria, the position won't appear in rating forms.
 
+[Managing Rating Criteria](/organization-settings/rating-criteria)
+
 ## Troubleshooting
 
 <AccordionGroup>
   <Accordion title="Position doesn't appear in the rating form">
     Check that:
+
     - The position has all 5 rating criteria defined
     - The user's role has permission to rate it (Role Mapping)
-    - The position is active (not deleted)
   </Accordion>
-  
   <Accordion title="Can't delete a position">
     Positions with historical ratings can't be fully deleted to preserve data integrity. Contact support if you need to hide a position.
   </Accordion>
-  
   <Accordion title="Changes aren't saving">
     Click outside the text field to trigger auto-save. If issues persist, try clicking **Save Changes** explicitly or refreshing the page.
   </Accordion>
