--- a/docs/organization-settings/rating-criteria.mdx
+++ b/docs/organization-settings/rating-criteria.mdx
@@ -1,9 +1,7 @@
 ---
-title: Rating Criteria
-description: How to define the 5 rating criteria for each position
+title: "Rating Criteria"
+description: "How to define the 5 rating criteria for each position"
 ---
-
-# Rating Criteria
 
 Each position has 5 criteria that define what you're rating. This guide shows you how to set them up.
 
@@ -19,15 +17,15 @@ Each position has 5 criteria that define what you're rating. This guide shows yo
 
 Criteria are the specific skills or behaviors you evaluate when rating someone. Each position has exactly 5 criteria.
 
-### Example: Register/iPOS
+### Example: iPOS
 
-| # | Criterion | What It Measures |
-|---|-----------|------------------|
-| 1 | Speed | How quickly they process orders |
-| 2 | Accuracy | Order accuracy, correct items |
-| 3 | Guest Interaction | Friendliness, eye contact, engagement |
-| 4 | Menu Knowledge | Knows products, can make suggestions |
-| 5 | Payment Handling | Cash and card transactions |
+| # | Criterion                | Description                                                                                                                                                                                        |
+| --- | ------------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| 1 | Smile & Shine            | Wave high, greet warmly, and set the tone with joy. Use the Core 4 for every guest interaction—it's their first impression of us.                                                                  |
+| 2 | Catch Every Detail       | Get names, cars, plates, and lanes right—every time.                                                                                                                                               |
+| 3 | Lead, Offer, Repeat      | Lead the guest in the ordering (actively using the guest name), offer to scan the app, offer seasonal items & ask to make EVERY order large, & repeat it back line by line.                        |
+| 4 | Close Gaps & Call It Out | Keep the line tight, speak loud & clear, help the team flow.                                                                                                                                       |
+| 5 | Friendly Farewell        | Ask if there's anything else you can do to serve our guests and send them off with a warm 'See you again soon.' This is the most impressionable role in the entire guest experience—make it count! |
 
 ## Setting Up Criteria
 
@@ -35,20 +33,19 @@ Criteria are the specific skills or behaviors you evaluate when rating someone. 
   <Step title="Select the Position">
     Use the dropdown at the top to choose which position you're configuring.
   </Step>
-  
   <Step title="Enter Criterion Names">
     For each of the 5 slots:
+
     - Enter a short, clear name
-    - Keep it to 1-3 words (e.g., "Speed", "Food Quality", "Team Support")
+    - Keep it to a few words (e.g., "Speed", "Food Quality", "Friendly Fairwell")
   </Step>
-  
   <Step title="Add Descriptions">
     For each criterion, write a description explaining:
+
     - What this criterion measures
     - What good performance looks like
     - Specific behaviors to observe
   </Step>
-  
   <Step title="Save">
     Changes auto-save when you click away or switch positions.
   </Step>
@@ -81,42 +78,27 @@ Descriptions appear in the rating form to help raters be consistent.
 2. **What each level looks like** - Help raters know when to give a 1, 2, or 3
 3. **Examples** - Concrete behaviors to look for
 
-### Example Description
-
-```
-Speed
-
-Rate how quickly the team member processes orders while maintaining quality.
-
-3 (Crushing It): Consistently fast, keeps the line moving, never a bottleneck
-2 (On the Rise): Good pace overall, occasional slowdowns during rushes
-1 (Not Yet): Regularly causes delays, struggles to keep up with line speed
-
-Look for: Order entry time, payment processing speed, ability to multitask
-```
-
 ## Common Criteria Categories
 
 Most positions include criteria from these categories:
 
-| Category | Examples |
-|----------|----------|
-| **Speed/Efficiency** | Speed, Pace, Timing, Throughput |
-| **Quality** | Accuracy, Consistency, Attention to Detail |
-| **Standards** | Cleanliness, Safety, Following Procedures |
-| **People Skills** | Communication, Teamwork, Guest Interaction |
-| **Knowledge** | Product Knowledge, Systems, Problem Solving |
+| Category             | Examples                                    |
+| -------------------- | ------------------------------------------- |
+| **Speed/Efficiency** | Speed, Pace, Timing, Throughput             |
+| **Quality**          | Accuracy, Consistency, Attention to Detail  |
+| **Standards**        | Cleanliness, Safety, Following Procedures   |
+| **People Skills**    | Communication, Teamwork, Guest Interaction  |
+| **Knowledge**        | Product Knowledge, Systems, Problem Solving |
 
 ## Updating Existing Criteria
 
 If you change criteria for a position that already has ratings:
 
-- **Historical ratings** keep their original criterion labels
-- **New ratings** use the updated criteria
+- **Historical and new ratings** use the updated criteria
 - **Averages** continue to calculate normally
 
 <Tip>
-For minor wording improvements, just update the text. For major changes to what you're measuring, consider whether it makes sense to start fresh or keep the historical data.
+  For minor wording improvements, just update the text. For major changes to what you're measuring, consider whether it makes sense to start fresh or keep the historical data.
 </Tip>
 
 ## Positions Without Criteria
@@ -135,11 +117,9 @@ Always set up all 5 criteria for every position you want to rate.
   <Accordion title="Position isn't showing up in rating form">
     Make sure all 5 criteria have names. Even if descriptions are optional, names are required for the position to be ratable.
   </Accordion>
-  
   <Accordion title="Wrong criteria showing up">
     Double-check that you selected the correct position in the dropdown. Similar position names can be confusing.
   </Accordion>
-  
   <Accordion title="Criteria aren't saving">
     Click outside the field to trigger auto-save. If the issue persists, refresh the page and try again.
   </Accordion>
